# demo1

./: .bazelrc  .gitignore  MODULE.bazel  MODULE_FIXES.md  README.md  bazel-bin  bazel-demo1  bazel-out  bazel-testlogs  package-lock.json  package.json
backend/: BUILD.bazel
backend/api/v1/admin/audit/: AuditRoutes.scala  AuditService.scala  BUILD.bazel
backend/api/v1/admin/organization/: BUILD.bazel  OrganizationRoutes.scala  OrganizationService.scala
backend/api/v1/admin/projects/: AdminProjectsRoutes.scala  BUILD.bazel  (+1 more)
backend/api/v1/auth/: AuthRoutes.scala  AuthService.scala  BUILD.bazel
backend/api/v1/health/: BUILD.bazel  HealthCheckRoutes.scala
backend/lib/: BUILD.bazel
backend/lib/activity_logs/: ActivityLog.scala  ActivityLogRepo.scala  ActivityLogTable.scala  BUILD.bazel
backend/lib/auth/: AuthHandler.scala  AuthMiddleware.scala  BUILD.bazel  JwtHandler.scala  LoginRequest.scala  PasswordHasher.scala  RefreshTokenRequest.scala  SignupRequest.scala  TokenResponse.scala
backend/lib/hashids/: BUILD.bazel  HashidsHandler.scala
backend/lib/http/: BUILD.bazel  CorsHandler.scala  JsonFormats.scala  JsonSupport.scala  WebSocketHandler.scala
backend/lib/notifications/: Notification.scala  NotificationRepo.scala  NotificationTable.scala
backend/lib/organizations/: BridgeOrganizationUser.scala  BridgeOrganizationUserRepo.scala  Organization.scala  OrganizationRepo.scala  OrganizationTable.scala
backend/lib/postgres/activity_logs/: ActivityLog.scala  ActivityLogDTO.scala  ActivityLogRepo.scala  ActivityLogTable.scala  BUILD.bazel
backend/lib/postgres/notifications/: BUILD.bazel  Notification.scala  NotificationDTO.scala  NotificationRepo.scala  NotificationTable.scala
backend/lib/postgres/organizations/: BUILD.bazel  BridgeOrganizationUser.scala  BridgeOrganizationUserRepo.scala  BridgeOrganizationUserTable.scala  Organization.scala  OrganizationDTO.scala  OrganizationRepo.scala  OrganizationTable.scala
backend/lib/postgres/projects/: BUILD.bazel  BridgeProjectUser.scala  BridgeProjectUserRepo.scala  BridgeProjectUserTable.scala  Project.scala  ProjectDTO.scala  ProjectRepo.scala  ProjectTable.scala
backend/lib/postgres/sprints/: BUILD.bazel  Sprint.scala  SprintDTO.scala  SprintRepo.scala  SprintTable.scala
backend/lib/postgres/subscription_plans/: BUILD.bazel  SubscriptionPlan.scala  SubscriptionPlanDTO.scala  SubscriptionPlanRepo.scala  SubscriptionPlanTable.scala
backend/lib/postgres/tasks/: Attachment.scala  AttachmentDTO.scala  AttachmentRepo.scala  AttachmentTable.scala  BUILD.bazel  BridgeTaskTaskCategory.scala  BridgeTaskTaskCategoryRepo.scala  BridgeTaskTaskCategoryTable.scala  BridgeTaskUser.scala  BridgeTaskUserRepo.scala  BridgeTaskUserTable.scala  Comment.scala  CommentDTO.scala  CommentRepo.scala  CommentTable.scala  Task.scala  TaskCategory.scala  TaskCategoryDTO.scala  TaskCategoryRepo.scala  TaskCategoryTable.scala  TaskDTO.scala  TaskRepo.scala  TaskTable.scala
backend/lib/postgres/user_sessions/: BUILD.bazel  UserSession.scala  UserSessionDTO.scala  UserSessionRepo.scala  UserSessionTable.scala
backend/lib/postgres/users/: BUILD.bazel  User.scala  UserDTO.scala  UserRepo.scala  UserTable.scala
backend/lib/postgres/work_times/: BUILD.bazel  WorkTime.scala  WorkTimeDTO.scala  WorkTimeRepo.scala  WorkTimeTable.scala
backend/lib/postgres/workspaces/: BUILD.bazel  BridgeWorkspaceUser.scala  BridgeWorkspaceUserRepo.scala  BridgeWorkspaceUserTable.scala  Workspace.scala  WorkspaceDTO.scala  WorkspaceRepo.scala  WorkspaceTable.scala
backend/lib/projects/: BUILD.bazel  BridgeProjectUser.scala  BridgeProjectUserRepo.scala  Project.scala  ProjectRepo.scala  ProjectTable.scala
backend/lib/redis/: TokenStorage.scala
backend/lib/redis/connector/: BUILD.bazel  RedisConnector.scala
backend/lib/redis/task_draft/: BUILD.bazel  TaskDraftRedisRepo.scala  TaskDraftRequest.scala  TaskDraftResponse.scala  TaskDraftService.scala
backend/lib/sprints/: BUILD.bazel  Sprint.scala  SprintRepo.scala
backend/lib/subscription_plans/: SubscriptionPlan.scala  SubscriptionPlanRepo.scala  SubscriptionPlanTable.scala
backend/lib/tasks/: Attachment.scala  AttachmentRepo.scala  BUILD.bazel  BridgeTaskTaskCategory.scala  BridgeTaskTaskCategoryRepo.scala  BridgeTaskUser.scala  BridgeTaskUserRepo.scala  BridgeTaskUserTable.scala  Comment.scala  CommentRepo.scala  Task.scala  TaskCategory.scala  TaskCategoryRepo.scala  TaskCreateRequest.scala  TaskRepo.scala  TaskResponse.scala  TaskUpdateRequest.scala
backend/lib/user_sessions/: BUILD.bazel  UserSession.scala  UserSessionRepo.scala
backend/lib/users/: BUILD.bazel  User.scala  UserRepo.scala  UserTable.scala
backend/lib/work_times/: WorkTime.scala  WorkTimeRepo.scala  WorkTimeTable.scala
backend/lib/workspaces/: BridgeWorkspaceUser.scala  BridgeWorkspaceUserRepo.scala  BridgeWorkspaceUserTable.scala  Workspace.scala  WorkspaceRepo.scala
backend/main/: BUILD.bazel  Main.scala
backend/main/resources/: application.conf.example  logback.xml
backend/src/main/resources/: application.conf
frontend/: BUILD.bazel  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.bazel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/app/: App.tsx  main.tsx
frontend/src/components/: BUILD.bazel  Button.tsx  WorkSpaceSwitch.tsx
frontend/src/lib/http/: BUILD.bazel  fetchWrapper.ts
frontend/src/lib/storage/: BUILD.bazel  tokenStorage.ts
frontend/src/lib/utils/: errorMessage.ts
frontend/src/pages/: HomePage.tsx
frontend/src/pages/auth/: BUILD.bazel
frontend/src/pages/dashboard/: BUILD.bazel
frontend/src/pages/error/: BUILD.bazel
frontend/src/pages/project/: BUILD.bazel
frontend/src/pages/settings/: BUILD.bazel
frontend/src/pages/workspace/: BUILD.bazel
frontend/src/routes/: BUILD.bazel
frontend/src_old/: App.tsx
frontend/src_old/components/layout/: BUILD.bazel
frontend/src_old/components/ui/: BUILD.bazel  UserSwitch.tsx
frontend/src_old/pages/admin/: BUILD.bazel
frontend/src_old/pages/auth/: LoginPage.tsx
frontend/src_old/pages/task/: BUILD.bazel
(+56 files in other folders)
