module(
    name = "demo1",
    version = "0.1.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "1.42.2") # for extent bazel build rules
bazel_dep(name = "aspect_rules_js", version = "1.40.0") # to build JS and TypeScript
bazel_dep(name = "aspect_rules_ts", version = "2.4.2") # to build TypeScript
bazel_dep(name = "rules_nodejs", version = "6.4.0") # to build nodeJS

bazel_dep(name = "rules_scala", version = "7.0.0") # build rules for scala (need for scala build)
bazel_dep(name = "rules_jvm_external", version = "6.3") # using maven repo for extensions

# Bazel tool chain
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven") ## using rules_jvm_external
maven.install(
    name = "maven_demo1",
    artifacts = [
        "org.apache.pekko:pekko-actor_2.13:1.0.3", ## pekko actor lib, to implement actor model/ message based async functions
        "org.apache.pekko:pekko-actor-typed_2.13:1.0.3", ## pekko actor lib, to implement strict typed
        "org.apache.pekko:pekko-stream_2.13:1.0.3", ## pekko lib to handle stream (for much amount of data)
        "org.apache.pekko:pekko-http-core_2.13:1.0.1", ## pekko core (low layer)
        "org.apache.pekko:pekko-http_2.13:1.0.1", ## pekko core
        "com.typesafe.slick:slick_2.13:3.5.0", # Slick lib, to write SQL in Scala
        "com.typesafe.slick:slick-hikaricp_2.13:3.5.0", # integration between Slick and HikariCP/ connection pool
        "org.postgresql:postgresql:42.7.1", # PostgreSQL
        "io.lettuce:lettuce-core:6.3.1.RELEASE", # Redis Client
        "com.typesafe.play:play-json_2.13:2.10.4", # Scala JSON lib
        "com.github.pjfanning:pekko-http-play-json_2.13:2.1.0",
        "com.typesafe.play:play-functional_2.13:2.10.4",
        "com.github.jwt-scala:jwt-core_2.13:9.4.5", # JWT lib
        "org.mindrot:jbcrypt:0.4", #bccrypt lib, for shadow passwords
        "ch.qos.logback:logback-classic:1.4.14", # logging lib for Java (Simple Logging Facade for Java)
        "com.typesafe.scala-logging:scala-logging_2.13:3.9.5", # logger wrapper for Scala
        "com.typesafe:config:1.4.3", # typesafe config *HOCON(readable JSON) 
        "org.scalatest:scalatest_2.13:3.2.17", # scala test lib
        "org.apache.pekko:pekko-http-testkit_2.13:1.0.1", # pekko http test kit
        "org.apache.pekko:pekko-actor-testkit-typed_2.13:1.0.3", # pekko actor test kit
        "com.fasterxml.jackson.core:jackson-databind:2.15.2", # JSON lib dependency with Play
        "com.fasterxml.jackson.core:jackson-core:2.15.2", # JSON lib dependency with Play
        "org.hashids:hashids:1.0.3", #Hashids for hiding primary keys in URLs *technically it's not hash, but just encoding with salt
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven_demo1") # publish the repo as maven_demo1

scala_config = use_extension("@rules_scala//scala/extensions:config.bzl", "scala_config") # using scala config extensions
scala_config.settings(scala_version = "2.13.16")

scala_deps = use_extension("@rules_scala//scala/extensions:deps.bzl", "scala_deps") # extend scala dependencies
scala_deps.scala() # allows scala compiling in this project with Bazel tool chain

# Node.js toolchain
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    name = "nodejs",
    node_version = "20.18.2",  # CVE-2025-23083 fixed
)
use_repo(node, "nodejs_toolchains")

register_toolchains("@nodejs_toolchains//:all")

# JS toolchain
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True) # npm settings
npm.npm_translate_lock(
    name = "npm_frontend",
    pnpm_lock = "//frontend:pnpm-lock.yaml",
)

use_repo(npm, "npm_frontend")

# TypeScript toolchain
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# for docker image build
bazel_dep(name = "rules_oci", version = "1.7.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    image = "gcr.io/distroless/java17-debian11",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "latest",
)
use_repo(oci, "distroless_java")