load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

exports_files([
    "tsconfig.json",
    "tsconfig.app.json",
    "tsconfig.node.json",
    "tsconfig.bazel.json",
    "pnpm-lock.yaml",
])

ts_config(
    name = "tsconfig_bazel",
    src = "tsconfig.bazel.json",
    visibility = ["//visibility:public"],
)