load("@rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "main",

    srcs = glob(["*.scala"]),

    main_class = "com.taskmanagement.main.demo1.Main",

    resources = glob(["resources/**"]),

    deps = [
        "@maven_demo1//:com_typesafe_config",
        "@maven_demo1//:com_typesafe_scala_logging_scala_logging_2_13",
        "@maven_demo1//:org_slf4j_slf4j_api",

        "@maven_demo1//:ch_qos_logback_logback_classic",
        "@maven_demo1//:com_typesafe_slick_slick_2_13",
        "@maven_demo1//:org_postgresql_postgresql",
        "@maven_demo1//:com_typesafe_slick_slick_hikaricp_2_13",
    ],
)