load("@rules_scala//scala:scala.bzl", "scala_library")

scala_library (
    name = "auth",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven_demo1//:com_typesafe_config",
        "@maven_demo1//:com_typesafe_scala_logging_scala_logging_2_13",
        "@maven_demo1//:org_slf4j_slf4j_api",

        "@maven_demo1//:com_github_jwt_scala_jwt_core_2_13",
        "@maven_demo1//:org_mindrot_jbcrypt",
        "@maven_demo1//:org_apache_pekko_pekko_actor_2_13",
        "@maven_demo1//:org_apache_pekko_pekko_stream_2_13",
        "@maven_demo1//:org_apache_pekko_pekko_http_2_13",
        "@maven_demo1//:org_apache_pekko_pekko_http_core_2_13",
    ]
)