load("@rules_scala//scala:scala.bzl", "scala_library")

scala_library(
    name = "redis_connector",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven_demo1//:com_typesafe_config",
        "@maven_demo1//:com_typesafe_scala_logging_scala_logging_2_13",
        "@maven_demo1//:org_slf4j_slf4j_api",
        
        "@maven_demo1//:io_lettuce_core",
    ]
)